--- a/extention/manifest.json
+++ b/extention/manifest.json
@@ -10,7 +10,7 @@
 "content_scripts": [
   {
     "matches": ["<all_urls>"],
-    "js": ["main.js"],
+    "js": ["main.js", "fileSystem.js"],
     "run_at": "document_end"
     
   }
