--- a/extention/manifest.json
+++ b/extention/manifest.json
@@ -2,7 +2,7 @@
   "name": "Getting Started Example",
   "version": "1.0",
   "description": "Build an Extension!",
-  "permissions": ["activeTab", "declarativeContent", "storage"],
+  "permissions": ["activeTab", "declarativeContent", "storage","identity"],
   "options_page": "options.html",
   "chrome_url_overrides": {
     "newtab": "index.html"
@@ -33,6 +33,11 @@
     "32": "images/get_started32.png",
     "48": "images/get_started48.png",
     "128": "images/get_started128.png"
+  },
+  "content_security_policy": "script-src 'self' https://apis.google.com/; object-src 'self'",
+  "oauth2": {
+    "client_id": "632642521935-0ma4qk8e0od6m8for16cf78l49s00b5v.apps.googleusercontent.com",
+    "scopes":["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"]
   },
   "manifest_version": 2
 }
